--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,19 +1,22 @@
-#contact {
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
-} 
   #form {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    width: 500px;
-    margin: 50px auto 100px auto;
+    width: 470px;
+    margin: auto;
   }
 
   #form h1{
     text-align: center;
   }
+
+  .form-box {
+    display: flex;
+    flex-direction: column;
+  }
   
   #form input {
+    flex: 1 1 0;
     font-family: "Source Sans Pro", sans-serif;
     font-size: 0.875em;
     width: 470px;
@@ -40,7 +43,6 @@
   
   #form textarea {
     width: 470px;
-    max-width: 470px;
     height: 110px;
     max-height: 110px;
     padding: 15px;
@@ -82,8 +84,16 @@
   }
 
   
-@media all and (max-width: 1024px) {
+@media all and (max-width: 600px) {
   #form {
-    padding: 15px;
+    max-width: 75%;
   }
+  #form input, #form textarea, #form #submit {
+    max-width: 75%;
+  }
+
+  .form-box {
+    margin-left: 3.5em;
+  }
+
 }
