--- a/src/components/TechList.css
+++ b/src/components/TechList.css
@@ -24,8 +24,9 @@ li {
         font-size: 1rem;
     }
     .list li {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
+
 }
 
 @media screen and (min-width: 1024px) {
